# ice-nine

./: .gitignore  Cargo.toml  README.md
examples/llm/: main.rs
examples/mnist_eval/: main.rs  mnist_eval_config.toml
examples/mnist_train/: main.rs  mnist_train_config.toml
examples/tensors/: main.rs
examples/tokenize/: main.rs
examples/train_llm/: main.rs
src/: data.rs  grad.rs  layer.rs  layers.rs  lib.rs  llm.rs  loss.rs  losses.rs  macros.rs  main.rs  nn.rs  optimizer.rs  tensor.rs  tokenizer.rs  training.rs
