[package]
name = "ice-nine"
version = "0.1.2"
edition = "2021"
authors = ["Ben Chen <chenbenjamin2@gmail.com>"]

description = "Simple ML library"
repository = "https://github.com/ben-chen/ice-nine"
keywords = ["deep-learning", "machine-learning"]
categories = ["science"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
byteorder = "1.5.0"
ndarray = "0.15.6"
rand = "0.8.5"
statrs = "0.17.1"

[dev-dependencies]
serde = { version="1.0.203", features=["derive"] }
toml = "0.8.14"
