[package]
name = "ice-nine"
version = "0.1.2"
edition = "2021"
authors = ["Ben Chen <chenbenjamin2@gmail.com>"]

description = "Simple ML library"
repository = "https://github.com/ben-chen/ice-nine"
keywords = ["deep-learning", "machine-learning"]
categories = ["science"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
byteorder = "1.5.0"
num-traits = "0.2.19"
rand = "0.8.5"
rayon = "1.10.0"
serde_json = "1.0.140"
statrs = "0.18.0"

[dev-dependencies]
serde = { version="1.0.203", features=["derive"] }
toml = "0.8.19"
